testsuite/tests/ghc-regress/annotations/should_fail/annfail11.hs
module Annfail11 where

{-# ANN length "Cannot annotate other modules yet" #-}
{-# ANN type Integer "Cannot annotate other modules yet" #-}